--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
+    "@types/jest": "^29.5.12",
     "@types/node": "^16.18.97",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -29,8 +29,9 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "redux-devtools-extension": "^2.13.9",
-    "tailwindcss": "^3.4.3"
+    
+    "jest": "^29.7.0",
+    "redux-devtools-extension": "^2.13.9"    
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,6 +39,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  
   "eslintConfig": {
     "extends": [
       "react-app",
